[project]
name = "boomi-mcp-server"
version = "0.1.0"
description = "Local MCP server for Boomi platform management"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "boomi>=2.0.1",
]

[project.scripts]
boomi-mcp-server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/boomi_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"server.py" = "server.py"
